# python-ML-DL

./: .gitignore  README.md  pyproject.toml
sim-pred-webui/: README.md  app.py  datasets.py  requirements.txt  step01.py  step02.py  step03.py  step04.py  step05.py
src/: test.py
src/Feature_Engineering/1_data_preprocessing/: a01_read_data.ipynb  a02_describe_duplicates.ipynb  a03_check_missing_data.ipynb  a04_handling_missing_data.ipynb  a05_scaling.ipynb  data1.csv  data2.csv
src/Feature_Engineering/2_model_training/: a01_DecisionTreeRegressor.ipynb  a02_DTree_model_validation.ipynb  a03_RandomForest.ipynb
src/ML_models/Decision_Tree/: a01_DecisionTreeClassifier_hours_studied.ipynb  a02_more_features.ipynb  a03_regression_1d.ipynb
src/ML_models/K_Nearest_Neighbors/: a01_KNeighborsClassifier.ipynb  a02_decision_boundaries.ipynb  a03_cross_validation.ipynb  a04_KNeighborsRegressor_random.ipynb  a05_KNeighborsRegressor_diabetes.ipynb
src/ML_models/Linear_Regression/: a01_income.ipynb  a02_study_hours.ipynb
src/ML_models/Logistic_Regression/: a01.ipynb  a02.ipynb  a03_titanic.ipynb
src/ML_models/RandomForest/: a01_RandomForestRegressor.ipynb  a02_RandomForestClassifier.ipynb  a03_RFReg_housing.ipynb  a04_RFReg_salary.ipynb  a05_RFClass_iris.ipynb  a06_RFClass_heart_GridSearchCV.ipynb
src/ML_models/RandomForestRegressor/: a01_RandomForest.ipynb
src/ML_models/Support_Vector_Machine/: a01_svc.ipynb  a02_svc_GridSearchCV.ipynb  a03_svc_scaled.ipynb  a04_svc_random_pdf.ipynb  a05_non_linear_circles.ipynb  (+2 more)
src/data/: study_hours.csv
(+36 files in other folders)
