[project]
name = "python-ml-dl"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "gradio>=6.17.3",
    "matplotlib>=3.10.9",
    "notebook>=7.5.7",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
]
